resolved issue bkppsdm/lms#90 and update tag seeder
